# Alien

./: COMPARISON.md  Cargo.toml  ELLE_SCREENSHOTS.md  ELLE_TESTING_GUIDE.md  FILESYSTEM_ARCHITECTURE.md  IMPLEMENTATION_REPORT.md  Makefile  Makefile.dbfs  PROJECT_HIGHLIGHTS.md  README.md  README_CN.md  README_EN.md  RESEARCH_ROADMAP.md  TESTING.md  elle_test_output.txt  kallsyms  rust-toolchain.toml  verify_test_setup.sh
.cargo/: config.toml
diskfs/: eventfd_test  final_test  hello  init  run_test  sleep  socket_test  test_epoll  tests
docs/: CRASH_INVARIANTS.md
elle_dbfs_client/: Cargo.toml
elle_dbfs_client/src/: dbfs_client.rs  main.rs
kernel/: Cargo.toml
kernel/src/: ksym.rs  lib.rs
kernel/src/ebpf/: mod.rs
kernel/src/fs/: basic.rs
kernel/src/ipc/: futex.rs
kernel/src/kprobe/: kprobe_test.rs  mod.rs
kernel/src/per_cpu/: mod.rs
kernel/src/perf/: ebpf.rs  kprobe.rs  mod.rs
kernel/src/task/: kthread.rs  mod.rs  task.rs
kernel/src/trap/: context.rs
subsystems/arch/src/riscv/: mod.rs  regs.rs
subsystems/dbfs/: ARCHITECTURE.md  ARCHITECTURE_FINAL.md  COMPLETION_SUMMARY.md  Cargo.toml  FINAL_SUMMARY.md  IMPLEMENTATION_STATUS.md  PERSISTENT_WAL_PLAN.md  QUICKSTART.md  README.md  TRANSACTION_GUIDE.md  USAGE_GUIDE.md  VFS_INTEGRATION_COMPLETE.md
subsystems/dbfs-vfs/: Cargo.toml
subsystems/dbfs-vfs/src/: lib.rs
subsystems/dbfs/elle_tests/: QUICKSTART.md  README.md  quick_test.sh  run_all_elle_tests.sh  run_elle_test.sh  test_single_transaction.sh  test_small.sh  test_tcp_communication.sh
subsystems/dbfs/src/: common.rs  elle_handler.rs  elle_handler_real.rs  elle_interface.rs  elle_protocol.rs  layout.rs  lib.rs  tcp_server.rs  tests.rs  wal.rs  wal_backend_v2.rs
subsystems/dbfs/src/alien_integration/: fstype.rs  inode.rs  mod.rs  superblock.rs  tests.rs  tests_elle_jepsen.rs  tests_enhanced.rs
subsystems/device_interface/src/: lib.rs
subsystems/devices/src/: lib.rs  net.rs
subsystems/drivers/src/: block_device.rs  elle_comm.rs  lib.rs  virtio_serial.rs
subsystems/jammdb/: Cargo.toml
subsystems/jammdb/src/: lib.rs
subsystems/platform/src/: console.rs  lib.rs
subsystems/unwinder/: Cargo.toml
subsystems/unwinder/src/: lib.rs  panic.rs
subsystems/vfs/: Cargo.toml
subsystems/vfs/src/: dbfs2_fs.rs  epoll.rs  eventfd.rs  file_system.rs  init.rs  initrd.rs  kfile.rs  lib.rs  log.rs  romulus_lite.rs  rvfs.rs  timerfd.rs  wal.rs
subsystems/vfs/src/dbfs/: db.rs  error.rs  file.rs  file_open.rs  metadata.rs  mod.rs  utils.rs
subsystems/vfs/src/dev/: random.rs
subsystems/vfs/src/ram/: mod.rs
tests/: DELIVERY_TREE.txt  ELLE_QUICK_START.md  fs_test.sh  mock_kernel_server.py  run_elle_test.sh  simple_test_server.py  test_simple_server.sh  test_single_transaction.sh  test_small.sh  test_tcp_communication.sh
tests/testbin-second-stage/: test_all.sh
tools/crash_monkey/: Cargo.toml
tools/crash_monkey/src/: main.rs
tools/initrd/: Makefile
user/apps/: Makefile
user/apps/dbfs_test/: Cargo.toml
user/apps/dbfs_test/src/: main.rs
user/apps/final_test/src/: main.rs
user/apps/minimal_fs_test/: Cargo.toml
user/apps/minimal_fs_test/src/: main.rs
user/apps/romulus_test/: Cargo.toml
user/apps/romulus_test/src/: main.rs
user/apps/simple_test/: Cargo.toml
user/apps/simple_test/src/: main.rs
user/apps/test_init/: Cargo.toml
user/apps/test_init/src/: main.rs
user/musl/.cargo/: config.toml
