[package]
name = "elle_dbfs_client"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时 (使用稳定版本)
tokio = { version = "1.35", features = ["full"] }
# 序列化 (使用较旧但稳定的版本)
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0.100"
# 二进制序列化 (使用 1.x 版本更稳定)
bincode = "1.3"
# 错误处理
anyhow = "1.0"

# Elle 官方框架 (可选,用于后续的异常检测)
# elle = "0.6"