[package]
name = "dbfs-vfs"
version = "0.1.0"
edition = "2021"

[dependencies]
dbfs2 = { path = "../dbfs" }
vfscore = { git = "https://github.com/os-module/rvfs.git", features = ["linux_error"] }
jammdb = { path = "../jammdb" }
log = "0.4"
spin = "0.9"
ksync = { path = "../../subsystems/ksync" }
lock_api = "0.4"
device_interface = { path = "../../subsystems/device_interface" }
constants = { path = "../../subsystems/constants" }
downcast-rs = { version = "1.2.0", default-features = false }


[features]
fuse = ["dbfs2/fuse"]