[package]
name = "dbfs-vfs"
version = "0.1.0"
edition = "2021"

[dependencies]
vfscore = { git = "https://github.com/os-module/rvfs.git" }
dbfs2 = { path = "../dbfs" }
jammdb = { git = "https://github.com/nusakom/jammdb.git" }
device_interface = { path = "../device_interface" }
constants = { path = "../constants" }
log = "0.4"
spin = "0.9"
lock_api = "0.4"
downcast-rs = { version = "1.2.0", default-features = false }
bitflags = "1.3"

[features]
default = []