[package]
name = "dbfs2"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.3"
jammdb = { git = "https://github.com/nusakom/jammdb.git" }
log = "0.4"
spin = "0.9"
device_interface = { path = "../device_interface" }
constants = { path = "../../subsystems/constants" }

[target.'cfg(target_os = "none")'.dependencies]
ksync = { path = "../../subsystems/ksync" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }


[features]
fuse = []


