[package]
name = "vfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smoltcp = { version = "0.10.0", features = ["no_std"] }
dbfs2 = { git = "https://github.com/nusakom/dbfs2.git", features = ["fuse"] }
spin = "0"
log = "0"
ksync = { path = "../ksync" }
arch = { path = "../arch" }
constants = { path = "../constants" }
interrupt = { path = "../interrupt" }
platform = { path = "../platform" }
mem = { path = "../mem" }
shim  = { path = "../shim" }
timer = { path = "../timer" }

bitflags = "1.3"
downcast-rs = { version = "1.2.0", default-features = false }
vfscore = { git = "https://github.com/os-module/rvfs.git", features = [
    "linux_error",
] }
devfs = { git = "https://github.com/os-module/rvfs.git" }
dynfs = { git = "https://github.com/os-module/rvfs.git" }
ramfs = { git = "https://github.com/os-module/rvfs.git" }
fat-vfs = { git = "https://github.com/os-module/rvfs.git", optional = true }
lwext4-vfs = { git = "https://github.com/os-module/rvfs" , optional = true }
devices = { path = "../devices" }

printf-compat = { version = "0.1", default-features = false, optional = true }
cty = { version =  "0", optional = true }

cpio_reader = { version = "0.1.1", optional = true }
libflate = { version = "2.0.0", default-features = false, optional = true }
core2 = { version = "0.4", default-features = false, optional = true }

[dependencies.tinyrlibc]
optional = true
git = "https://github.com/rust-embedded-community/tinyrlibc"
default-features = false
features = ["strcmp","strcpy","strncmp","alloc"]

[features]
default = ["initrd"]
ext = ["dep:lwext4-vfs","dep:printf-compat","dep:cty", "tinyrlibc"]
fat = ["dep:fat-vfs"]
initrd  = ["dep:libflate","dep:cpio_reader","dep:core2"]

[dependencies.smoltcp]
version = "0.10.0"
features = ["no_std"]

[dependencies.vfs]
path = "../path_to_vfs"  # 如果是本地依赖
version = ">= 0.1.0"     # 或者确保适配的版本

